--- a/RentalProject/Views/Web.config
+++ b/RentalProject/Views/Web.config
@@ -8,6 +8,10 @@
     </sectionGroup>
   </configSections>
 
+  <connectionStrings>
+    <add name="dbconnection" connectionString="Data Source=PHOENIX\SQLEXPRESS;Integrated Security=true;Initial Catalog=MySampleDB" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
