--- a/RentalProject/RentalProject.csproj
+++ b/RentalProject/RentalProject.csproj
@@ -141,9 +141,14 @@
     <Compile Include="Migrations\202108180820491_AddIsSubscribeToCustomer.designer.cs">
       <DependentUpon>202108180820491_AddIsSubscribeToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202108180828411_AddMembershipType.cs" />
+    <Compile Include="Migrations\202108180828411_AddMembershipType.designer.cs">
+      <DependentUpon>202108180828411_AddMembershipType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\DBContext.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
@@ -212,6 +217,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202108180820491_AddIsSubscribeToCustomer.resx">
       <DependentUpon>202108180820491_AddIsSubscribeToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202108180828411_AddMembershipType.resx">
+      <DependentUpon>202108180828411_AddMembershipType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
