membership table populated using migration

--- a/RentalProject/RentalProject.csproj
+++ b/RentalProject/RentalProject.csproj
@@ -145,6 +145,10 @@
     <Compile Include="Migrations\202108180828411_AddMembershipType.designer.cs">
       <DependentUpon>202108180828411_AddMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202108180832090_PopulatemembershipType.cs" />
+    <Compile Include="Migrations\202108180832090_PopulatemembershipType.designer.cs">
+      <DependentUpon>202108180832090_PopulatemembershipType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\DBContext.cs" />
@@ -220,6 +224,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202108180828411_AddMembershipType.resx">
       <DependentUpon>202108180828411_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202108180832090_PopulatemembershipType.resx">
+      <DependentUpon>202108180832090_PopulatemembershipType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
